[bugfix] Icon: info z-index higher than image
fix #1393

--- a/packages/icon/index.less
+++ b/packages/icon/index.less
@@ -7,14 +7,18 @@
     height: 1em;
 
     image {
+      position: absolute;
       top: 0;
-      left: 0;
       right: 0;
       bottom: 0;
-      margin: auto;
+      left: 0;
       max-width: 100%;
       max-height: 100%;
-      position: absolute;
+      margin: auto;
     }
+  }
+
+  &__info {
+    z-index: 1;
   }
 }
